# octave

./: .dir-locals.el  .editorconfig  .gitignore  .hgignore  .hgsub  .hgsubstate  .hgtags  Announce  CHECKLIST  CITATION  CLASSES  COPYRIGHT.md  ChangeLog  ChangeLog.1  Doxyfile  FLEX.patch  HACKING  INFO.PATCH  INSTALL  INSTALL.Windows  MAKEINFO.PATCH  Makeconf.in  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.1  NEWS.2  NEWS.3  PROJECTS  README  README.Cray  README.Cygwin  README.Linux  README.MSVC  README.MacOS  README.MachTen  README.MinGW  README.NLP  README.Windows  (+64 more)
doc/: ChangeLog  Makefile.am  Makefile.in  conf.texi  conf.texi.in  module.mk  texinfo.tex  texmf.cnf
doc/doxyhtml/: Doxyfile.in  DoxyfileQt.patch  Doxygen.cfg  Makefile.am  README  README.md  module.mk
doc/faq/: FAQ.texi  Makefile.am  Makefile.in  Octave-FAQ.texi  OctaveFAQ.texi
doc/icons/: Makefile.am  octave.desktop.in
doc/interpreter/: Makefile.am  Makefile.in  Map-s.cc  TODO  addtwomatrices.cc  amuse.texi  arith.texi  arith.txi  audio.texi  audio.txi  audiodevinfo.txi  audiofile.txi  audioplayer.txi  audiorecorder.txi  basics.texi  basics.txi  bit.txi  bugs.texi  bugs.txi  bugs1.texi  celldemo.cc  config-images.sh  container.txi  contrib.txi  contributors.in  control.texi  control.txi  cp-idx.texi  cp-idx.txi  data.texi  data.txi  debug.txi  diagperm.txi  diffeq.texi  dir  (+138 more)
examples/: COPYING  Makefile.am  Makefile.in  addtwomatrices.cc  celldemo.cc  embedded.cc  firstmexdemo.c  fortdemo.cc  fortsub.f  funcdemo.cc  globaldemo.cc  hello.cc  helloworld.cc  info-emacs-info  info-emacs-octave-help  make_int.cc  mex_demo.c  module.mk  mycell.c  myfeval.c  myfevalf.f  myfunc.c  myhello.c  mypow2.c  myprop.c  myset.c  mysparse.c  mystring.c  mystruct.c  oct_demo.cc  octave.desktop.in  oregonator.cc  oregonator.m  paramdemo.cc  standalone.cc  standalonebuiltin.cc  stringdemo.cc  structdemo.cc  unwinddemo.cc
info/: ChangeLog  Makefile.in  acconfig.h  clib.c  configure.in  dir.c  display.c  display.h  doc.h  dribble.c  dribble.h  echo_area.c  echo_area.h  error.c  filesys.c  filesys.h  footnotes.c  footnotes.h  gc.c  gc.h  general.h  getopt.h  getopt1.c  indices.c  indices.h  info-stnd.texi  info-utils.c  info-utils.h  info.c  info.h  info.texi  infodoc.c  infomap.c  infomap.h  m-x.c  makedoc.c  nodemenu.c  nodes.c  nodes.h  search.c  (+16 more)
kpathsea/: .gdbinit  BUGS  ChangeLog  HIER  INSTALL  MakeTeX.site  MakeTeXMF  MakeTeXPK  MakeTeXPK.in  MakeTeXTFM  MakeTeXcommon  MakeTeXls-R  MakeTeXmkdir  MakeTeXnames  MakeTeXnames.cnf  MakeTeXupdate  Makefile  Makefile.in  NEWS  PROJECTS  README  absolute.c  absolute.h  acconfig.h  acklibtool.m4  aclocal.m4  basename.c  bugs.texi  c-auto.h  c-auto.h.in  c-auto.in  c-ctype.h  c-dir.h  c-errno.h  c-fopen.h  c-limits.h  c-memstr.h  c-minmax.h  c-namemx.h  c-pathch.h  (+113 more)
libcruft/: ChangeLog  Makefile.am  Makefile.in  Makerules.in  STOP.patch  configure.in  link-deps.mk  mkf77def.in
libgui/: Makefile.am  default-qt-settings  default-qt-settings.in  liboctgui-build-info.h  liboctgui-build-info.in.cc  link-deps.mk  mk-default-qt-settings.in  mk-default-qt-settings.in.sh  module.mk  qterminal-module.mk
libinterp/: Makefile.am  build-env-features.sh  build-env.h  build-env.in.cc  build-info.h  build-info.in.cc  builtins.h  config-features.sh  deprecated-config.h  find-defun-files.sh  gendoc.pl  genprops.awk  liboctinterp-build-info.h  liboctinterp-build-info.in.cc  link-deps.mk  mk-build-env-features.sh  mk-builtins.pl  mk-doc.pl  mk-errno-list  mk-pkg-add  mk-pkg-add.sh  mk-version-h.in.sh  mkbuiltins  mkdefs  mkdocs  mkops  module.mk  oct-conf-features.h  oct-conf.h  oct-conf.in.cc  oct-conf.in.h  octave.cc  octave.h  octinterp.in.pc  op-kw-docs  options-usage.h  options.h  usage.h  version.cc  version.in.h
liboctave/: Array-C.cc  Array-b.cc  Array-ch.cc  Array-d.cc  Array-f.cc  Array-fC.cc  Array-flags.cc  Array-flags.h  Array-i.cc  Array-idx-vec.cc  Array-idx.h  Array-s.cc  Array-so.cc  Array-str.cc  Array-util.cc  Array-util.h  Array-voidp.cc  Array.cc  Array.h  Array2-idx.h  Array2.cc  Array2.h  Array3-idx.h  Array3.cc  Array3.h  ArrayN-idx.h  ArrayN-inline.h  ArrayN.cc  ArrayN.h  Bounds.cc  Bounds.h  CColVector.cc  CColVector.h  CDiagMatrix.cc  CDiagMatrix.h  CMatrix.cc  CMatrix.h  CNDArray.cc  CNDArray.h  COLAMD.README  (+560 more)
readline/: CHANGELOG  CHANGES  COPYING  ChangeLog  MANIFEST  Makefile.in  README  acconfig.h  aclocal.m4  ansi_stdlib.h  bind.c  callback.c  chardefs.h  compat.c  complete.c  config.guess  config.h.in  configure  configure.in  display.c  emacs_keymap.c  funmap.c  histexpand.c  histfile.c  histlib.h  history.c  history.h  histsearch.c  input.c  isearch.c  keymaps.c  keymaps.h  kill.c  macro.c  memalloc.h  nls.c  parens.c  posixdir.h  posixstat.h  readline.c  (+18 more)
scripts/: ChangeLog  Makefile.am  Makefile.in  configure.in  gethelp.cc  mk-doc.pl  mk-pkg-add  mk-pkg-add.sh  mkdoc  mkdoc.pl  mkpkgadd  module.mk
src/: Array-oc.cc  Array-os.cc  Array-string.cc  Array-tc.cc  BaseSLList.cc  BaseSLList.h  Cell.cc  Cell.h  ChangeLog  DLList-fi.cc  DLList.cc  DLList.h  Makefile.am  Makefile.in  Map-fnc.cc  Map-i.cc  Map-tc.cc  Map.cc  Map.h  Queue.h  SLList-expr.cc  SLList-i.cc  SLList-misc.cc  SLList-pc.cc  SLList-plot.cc  SLList-str.cc  SLList-tc.cc  SLList-tm.cc  SLList.cc  SLList.h  SLQueue.h  SLStack-i.cc  SLStack-pc.cc  SLStack-str.cc  SLStack-sym.cc  SLStack-tm.cc  SLStack-tok.cc  SLStack-ue.cc  SLStack-ui.cc  SLStack.cc  (+549 more)
test/: ChangeLog  Makefile.am  Makefile.in  anonymous-function.tst  args.tst  bug-31371.tst  bug-38565.tst  bug-38576.tst  bug-40117.tst  bug-45969.tst  bug-45972.tst  bug-46330.tst  bug-49904.tst  bug-53579.tst  bug-53599.tst  bug-54490.tst  bug-55308.tst  bug-55321.tst  bug-55322.tst  bug-59950.tst  bug-61201.tst  bug-65153.tst  build-bc-overload-tests.sh  build-conv-tests.sh  build-sparse-tests.sh  build_bc_overload_tests.sh  build_bc_overloads_expected.m  build_sparse_tests.sh  colormaps.tst  command.tst  complex.tst  deprecate-props.tst  diag-perm.tst  error.tst  eval-catch.tst  eval-command.tst  fntests.m  for.tst  func.tst  global.tst  (+80 more)
(+9044 files in other folders)
